Build/use Spigot instead